--- a/slb-admin/pom.xml
+++ b/slb-admin/pom.xml
@@ -139,10 +139,6 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.unidal.framework</groupId>
-            <artifactId>dal-jdbc</artifactId>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -231,4 +227,32 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>project-repo</id>
+            <name>project-repo</name>
+            <url>file://${project.basedir}/repo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>project-plugin-repo</id>
+            <name>project-plugin-repo</name>
+            <url>file://${project.basedir}/repo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
