--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
                 <artifactId>logback-classic</artifactId>
                 <version>1.0.12</version>
             </dependency>
+            <dependency>
+                <groupId>org.unidal.framework</groupId>
+                <artifactId>foundation-service</artifactId>
+                <version>2.0.3</version>
+            </dependency>
 
             <!-- java ee dependency -->
             <dependency>
