--- a/slb-admin/pom.xml
+++ b/slb-admin/pom.xml
@@ -61,6 +61,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.unidal.framework</groupId>
+            <artifactId>foundation-service</artifactId>
+        </dependency>
 
         <!-- 日志系统 -->
         <dependency>
