--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
                 <version>${spring.data.mongo.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>1.6.11</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.struts</groupId>
                 <artifactId>struts2-spring-plugin</artifactId>
                 <version>${org.apache.struts.version}</version>
