make some changes

--- a/slb-agent/src/main/resources/message.properties
+++ b/slb-agent/src/main/resources/message.properties
@@ -1,3 +1,4 @@
 script_execute_exception=Script execute error: %s.
 file_not_exist=File %s not exists.
 default=Default.
+argument_check_fail=Argument %s is wrong.
