--- a/slb-agent/pom.xml
+++ b/slb-agent/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>commons-exec</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
     <build>
