change config file's path

--- a/camel-admin/src/main/resources/init-data/mongo.properties
+++ b/camel-admin/src/main/resources/init-data/mongo.properties
@@ -1,4 +1,4 @@
-## /data/appdatas/slb/slb.properties
+## /data/appdatas/camel/slb.properties
 mongodb.url=127.0.0.1:27017,127.0.0.2:27017
 mongodb.dbname_config=open_source_slb_config
 mongodb.dbname_nginx_log=open_source_nginx_log
